--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,8 +4,24 @@
         <attr name="dividerStrokeWidth" format="integer" />
         <attr name="dividerColor" format="color" />
         <attr name="dividerOrientation" format="enum">
-            <enum name="vertical" value="1"/>
-            <enum name="horizontal" value="2"/>
+            <enum name="vertical" value="1" />
+            <enum name="horizontal" value="2" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="SquareLayout">
+        <attr name="android:layout_gravity" />
+        <attr name="layout_position" format="enum">
+            <enum name="TOP_START" value="1" />
+            <enum name="TOP_END" value="2" />
+            <enum name="BOTTOM_END" value="3" />
+            <enum name="BOTTOM_START" value="4" />
+        </attr>
+    </declare-styleable>
+
+    <!--    <declare-styleable name="SquareLayout">-->
+    <!--        <attr name="SquareLayoutTextSize" format="float" />-->
+    <!--        <attr name="SquareLayoutTextColor" format="color" />-->
+    <!--        <attr name="SquareLayoutInnerPadding" format="integer" />-->
+    <!--    </declare-styleable>-->
 </resources>
