--- a/app/src/main/res/layout/fragment_custom_view_group_shower.xml
+++ b/app/src/main/res/layout/fragment_custom_view_group_shower.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,7 +14,8 @@
     <com.bpapps.viewgrouptest.customview.SquareLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#AFA655">
+        android:background="#AFA655"
+        android:padding="20dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvTOP_START"
@@ -29,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#5396CC"
+            android:padding="10dp"
             android:text="TOP_END"
             app:layout_position="TOP_END" />
 
@@ -49,4 +51,4 @@
             app:layout_position="BOTTOM_START" />
     </com.bpapps.viewgrouptest.customview.SquareLayout>
 
-</FrameLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
